--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -64,11 +64,11 @@ layout: default
     {%- if r.days_toward_support < page.activeSupportWarnThreshold %}{% assign colorClass = 'bg-yellow-200' %}{% endif %}
     {%- if r.days_toward_support < 0 %}{% assign colorClass = 'bg-red-000' %}{% endif %}
     <td class="{{ colorClass }}">
-    {% if r.supported_until %}
-      {% if r.is_supported %}Ends{% else %}Ended{% endif %}
-      {{ r.supported_until | timeago }} <div>({{ r.supported_until | date_to_string }})</div>
+    {% if r.active_support_until %}
+      {% if r.is_active_support_over %}Ended{% else %}Ends{% endif %}
+      {{ r.active_support_until | timeago }} <div>({{ r.active_support_until | date_to_string }})</div>
     {% else %}
-      {% if r.is_supported %}Yes{% else %}No{% endif %}
+      {% if r.is_active_support_over %}No{% else %}Yes{% endif %}
     {% endif %}
     </td>
     {% endif %}
@@ -93,11 +93,11 @@ layout: default
     {%- if r.days_toward_extendedSupport < 0 %}{% assign colorClass = 'bg-red-000' %}{% endif %}
     {%- if r.extendedSupport == false %}{% assign colorClass = 'bg-grey-lt-100' %}{% endif %}
     <td class="{{ colorClass }}">
-      {% if r.extended_supported_until %}
-        {% if r.is_extended_supported %}Ends{% else %}Ended{% endif %}
-        {{ r.extended_supported_until | timeago }} <div>({{ r.extended_supported_until | date_to_string }})</div>
+      {% if r.extended_support_until %}
+        {% if r.is_extended_support_over %}Ended{% else %}Ends{% endif %}
+        {{ r.extended_support_until | timeago }} <div>({{ r.extended_support_until | date_to_string }})</div>
       {% else %}
-        {% if r.is_extended_supported %}Yes{% else %}Unavailable{% endif %}
+        {% if r.is_extended_support_over %}Unavailable{% else %}Yes{% endif %}
       {% endif %}
     </td>
     {% endif %}
